2012-06-10  Rudy Neeser  <rudy.neeser@gmail.com>

	* README.md (README.md): Updates for installation methods.

2012-06-09  Rudy Neeser  <rudy.neeser@gmail.com>

	* README.md: Converted README to a markdown README

2012-03-31  Rudy Neeser  <rudy.neeser@gmail.com>

	* cl-heap-tests.asd (:cl-heap-tests): Updated version number to
	0.1.5

	* cl-heap.asd (:cl-heap): Updated version number to 0.1.5

	* heap.lisp (print-object):
	Removed unnecessary slot accessor. Patch by Michał Psota.

	* fibonacci-heap.lisp (concatenate-node-lists):
	Removed unnecessary slot accessors. Patch by Michał Psota.

2010-09-04  Rudy Neeser  <rudy.neeser@gmail.com>

	* binary-heap.lisp (children-positions, parent-position)
	(percolate-down, percolate-up, decrease-key, delete-from-heap):
	Changed the specialising class for various index arguments to
	these functions from FIXNUM to INTEGER in order to increase
	portabilty.

2010-03-17  Rudy Neeser  <rudy.neeser@gmail.com>

	* cl-heap-tests.asd: Added a new system definition file to run the
	testing framework for the package.

	* cl-heap.asd: Removed the automatic loading of the testing
	framework.

2009-12-20  Rudy Neeser  <rudy.neeser@gmail.com>

	* binary-heap.lisp (add-to-heap, add-all-to-heap): Fixed a bug in
	updating the size of the DATA array in the BINARY-HEAP class.

2009-06-18  Rudy Neeser  <rudy.neeser@gmail.com>

	* fibonacci-heap.lisp (pop-heap): Fixed a bug which created an
	array one size too small, causing POP-HEAP operations to
	intermittently fail.
